--- a/package.json
+++ b/package.json
@@ -4,7 +4,28 @@
   "description": "Angular2 Tooltip component",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall" : "typings install",
+    "pretest": "rm -rf dist ; webpack",
+    "test": "webpack-dev-server"
+  },
+  "dependencies": {
+  },
+  "peerDependencies": {
+    "angular2": "2.0.0-beta.14"
+  },
+  "devDependencies": {
+    "angular2": "2.0.0-beta.14",
+    "reflect-metadata": "0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "zone.js": "0.6.12",
+    "es6-shim" : "0.35.0",
+    "ts-loader": "0.8.2",
+    "raw-loader": "0.5.1",
+    "typescript": "1.8.10",
+    "typings": "0.7.12",
+    "webpack": "1.13.0",
+    "webpack-dev-server": "1.14.1",
+    "html-webpack-plugin": "^2.9.0"
   },
   "repository": {
     "type": "git",
