--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular2-tooltip",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Angular2 Tooltip component",
   "main": "index.js",
   "scripts": {
@@ -21,6 +21,7 @@
     "es6-shim" : "0.35.0",
     "ts-loader": "0.8.2",
     "raw-loader": "0.5.1",
+    "css-loader": "^0.23.1",
     "typescript": "1.8.10",
     "typings": "0.7.12",
     "webpack": "1.13.0",
