--- a/package.json
+++ b/package.json
@@ -11,17 +11,27 @@
   "dependencies": {
   },
   "peerDependencies": {
-    "angular2": "2.0.0-beta.14"
+    "@angular/common": "2.0.0-rc.4",
+    "@angular/http": "2.0.0-rc.4",
+    "@angular/compiler": "2.0.0-rc.4",
+    "@angular/core": "2.0.0-rc.4",
+    "@angular/platform-browser": "2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.4"
   },
   "devDependencies": {
-    "angular2": "2.0.0-beta.14",
+    "@angular/common": "2.0.0-rc.4",
+    "@angular/http": "2.0.0-rc.4",
+    "@angular/compiler": "2.0.0-rc.4",
+    "@angular/core": "2.0.0-rc.4",
+    "@angular/platform-browser": "2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "0.6.12",
     "es6-shim" : "0.35.0",
     "ts-loader": "0.8.2",
     "raw-loader": "0.5.1",
-    "css-loader": "^0.23.1",
+    "css-loader": "0.23.1",
     "typescript": "1.8.10",
     "typings": "0.7.12",
     "webpack": "1.13.0",
