--- a/package.json
+++ b/package.json
@@ -11,23 +11,24 @@
   "dependencies": {
   },
   "peerDependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4"
+   "@angular/common": "2.1.1",
+    "@angular/http": "2.1.1",
+    "@angular/compiler": "2.1.1",
+    "@angular/core": "2.1.1",
+    "@angular/platform-browser": "2.1.1",
+    "@angular/platform-browser-dynamic": "2.1.1"
   },
   "devDependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
+    "@angular/common": "2.1.1",
+    "@angular/http": "2.1.1",
+    "@angular/compiler": "2.1.1",
+    "@angular/core": "2.1.1",
+    "@angular/platform-browser": "2.1.1",
+    "@angular/platform-browser-dynamic": "2.1.1",
     "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "0.6.12",
+    "core-js": "2.4.1",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "0.6.26",
     "es6-shim" : "0.35.0",
     "ts-loader": "0.8.2",
     "raw-loader": "0.5.1",
@@ -36,7 +37,9 @@
     "typings": "0.7.12",
     "webpack": "1.13.0",
     "webpack-dev-server": "1.14.1",
-    "html-webpack-plugin": "^2.9.0"
+     "webpack-merge": "0.14.0",
+    "html-webpack-plugin": "2.9.0",
+    "extract-text-webpack-plugin": "1.0.1"
   },
   "repository": {
     "type": "git",
