--- a/.gitignore
+++ b/.gitignore
@@ -53,5 +53,6 @@ dist
 
 # Optional REPL history
 .node_repl_history
+.history
 Status API Training Shop Blog About
 © 2016 GitHub, Inc. Terms Privacy Security Contact Help
