--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "@angular/common": "2.1.1",
-    "@angular/http": "2.1.1",
-    "@angular/compiler": "2.1.1",
-    "@angular/core": "2.1.1",
-    "@angular/platform-browser": "2.1.1",
-    "@angular/platform-browser-dynamic": "2.1.1"
+    "@angular/common": "^2.1.1",
+    "@angular/http": "^2.1.1",
+    "@angular/compiler": "^2.1.1",
+    "@angular/core": "^2.1.1",
+    "@angular/platform-browser": "^2.1.1",
+    "@angular/platform-browser-dynamic": "^2.1.1"
   },
   "devDependencies": {
-    "@angular/common": "2.1.1",
-    "@angular/http": "2.1.1",
-    "@angular/compiler": "2.1.1",
-    "@angular/core": "2.1.1",
-    "@angular/platform-browser": "2.1.1",
-    "@angular/platform-browser-dynamic": "2.1.1",
+    "@angular/common": "^2.1.1",
+    "@angular/http": "^2.1.1",
+    "@angular/compiler": "^2.1.1",
+    "@angular/core": "^2.1.1",
+    "@angular/platform-browser": "^2.1.1",
+    "@angular/platform-browser-dynamic": "^2.1.1",
     "reflect-metadata": "0.1.3",
     "core-js": "2.4.1",
     "rxjs": "5.0.0-beta.12",
