--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@angular/compiler": "^2.1.1",
     "@angular/core": "^2.1.1",
     "@angular/platform-browser": "^2.1.1",
-    "@angular/platform-browser-dynamic": "^2.1.1",
-    "@angular/forms": "^2.1.1"
+    "@angular/platform-browser-dynamic": "^2.1.1"
   },
   "devDependencies": {
     "@angular/common": "^2.1.1",
