--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "ts-loader": "0.8.2",
     "raw-loader": "0.5.1",
     "css-loader": "0.23.1",
-    "typescript": "1.8.10",
+    "typescript": "^2.1.1",
     "typings": "0.7.12",
     "webpack": "1.13.0",
     "webpack-dev-server": "1.14.1",
