--- a/package.json
+++ b/package.json
@@ -10,35 +10,35 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "@angular/common": "^2.1.1",
-    "@angular/http": "^2.1.1",
-    "@angular/compiler": "^2.1.1",
-    "@angular/core": "^2.1.1",
-    "@angular/platform-browser": "^2.1.1",
-    "@angular/platform-browser-dynamic": "^2.1.1"
+    "@angular/common": "2.4.3",
+    "@angular/compiler": "2.4.3",
+    "@angular/core": "2.4.3",
+    "@angular/http": "2.4.3",
+    "@angular/platform-browser": "2.4.3",
+    "@angular/platform-browser-dynamic": "2.4.3"
   },
   "devDependencies": {
-    "@angular/common": "^2.1.1",
-    "@angular/http": "^2.1.1",
-    "@angular/compiler": "^2.1.1",
-    "@angular/core": "^2.1.1",
-    "@angular/platform-browser": "^2.1.1",
-    "@angular/platform-browser-dynamic": "^2.1.1",
+    "@angular/common": "2.4.3",
+    "@angular/compiler": "2.4.3",
+    "@angular/core": "2.4.3",
+    "@angular/http": "2.4.3",
+    "@angular/platform-browser": "2.4.3",
+    "@angular/platform-browser-dynamic": "2.4.3",
+    "core-js": "2.4.0",
+    "css-loader": "^0.26.1",
+    "es6-shim": "^0.35.3",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.28.0",
+    "raw-loader": "^0.5.1",
     "reflect-metadata": "0.1.3",
-    "core-js": "2.4.1",
-    "rxjs": "5.0.0-beta.12",
-    "zone.js": "0.6.26",
-    "es6-shim": "0.35.0",
-    "ts-loader": "0.8.2",
-    "raw-loader": "0.5.1",
-    "css-loader": "0.23.1",
-    "typescript": "^2.1.1",
-    "typings": "0.7.12",
-    "webpack": "1.13.0",
-    "webpack-dev-server": "1.14.1",
-    "webpack-merge": "0.14.0",
-    "html-webpack-plugin": "2.9.0",
-    "extract-text-webpack-plugin": "1.0.1"
+    "rxjs": "5.0.3",
+    "ts-loader": "^2.0.0",
+    "typescript": "^2.1.5",
+    "typings": "^2.1.0",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^2.6.1",
+    "zone.js": "0.7.4"
   },
   "repository": {
     "type": "git",
@@ -56,3 +56,4 @@
   },
   "homepage": "https://github.com/bharatraj88/angular2-tooltip#readme"
 }
+
