--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^2.6.1",
-    "zone.js": "0.7.4"
+    "zone.js": "0.7.4",
+    "@types/node": "7.0.0",
+    "@types/source-map": "0.5.0",
+    "@types/webpack": "2.1.0"
   },
   "repository": {
     "type": "git",
