--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,16 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": true,
-    "suppressImplicitAnyIndexErrors": true
+    "suppressImplicitAnyIndexErrors": true,
+    "lib": [
+      "dom",
+      "es6"
+    ],
+    "types": [
+      "node",
+      "source-map",
+      "webpack"
+    ]
   },
   "exclude": [
     "node_modules",
